--- a/src/pages/02/11-绘制随机透明度的星星/index.less
+++ b/src/pages/02/11-绘制随机透明度的星星/index.less
@@ -1,6 +1,6 @@
 .first11 {
   #canvas{
-    background: url("./images/sky.jpg");
+    background: url("images/sky.jpg");
     background-size: cover;
     background-position: right bottom;
   }
