--- a/src/pages/03/20-狮子座/index.less
+++ b/src/pages/03/20-狮子座/index.less
@@ -1,6 +1,6 @@
 .szz {
   #canvas {
-    background: url("./images/sky.jpg");
+    background: url("images/sky.jpg");
     background-size: cover;
     background-position: right bottom;
   }
