--- a/src/pages/02/12-跳动的星星/index.less
+++ b/src/pages/02/12-跳动的星星/index.less
@@ -1,6 +1,6 @@
 .first12 {
     #canvas {
-        background: url("./images/sky.jpg");
+        background: url("images/sky.jpg");
         background-size: cover;
         background-position: right bottom;
     }
